# drive

./: README.md  pyproject.toml
tygle_drive/: __init__.py  drive.py
tygle_drive/rest/: files.py
tygle_drive/types/: __init__.py
tygle_drive/types/enums/: __init__.py
tygle_drive/types/enums/files/: __init__.py  any_mime_type.py  export_mime_type.py  google_mime_type.py  include_permissions_for_view.py  space.py
tygle_drive/types/enums/permissions/: __init__.py  display_name.py  role.py  type.py
tygle_drive/types/enums/permissions/permission_details/: __init__.py  permission_type.py  role.py
tygle_drive/types/resources/: __init__.py
tygle_drive/types/resources/files/: __init__.py  capabilities.py  content_hints.py  content_restriction.py  file.py  image_media_metadata.py  link_share_metadata.py  shortcut_details.py  user.py  video_media_metadata.py
tygle_drive/types/resources/permissions/: permission.py  permission_details.py
tygle_drive/types/responses/files/: __init__.py  list.py
